# led-platform

./: .gitignore  CLAUDE.md  Cargo.toml  LUMYX_GOSL.md  README.md
crates/audio-core/: Cargo.toml
crates/audio-core/src/: analyzer.rs  bands.rs  beat.rs  bpm.rs  capture.rs  contracts.rs  fft.rs  harmonics.rs  lib.rs  pipeline.rs  ring_buffer.rs  window.rs
crates/audio-core/tests/: bench_a_fft_features.rs  no_alloc.rs
crates/led-audio/: Cargo.toml
crates/led-audio/src/: analyzer.rs  bands.rs  beat.rs  fft.rs  lib.rs
crates/led-bridge/: Cargo.toml
crates/led-bridge/src/: adapter.rs  bridge.rs  lib.rs  sim.rs
crates/led-bridge/tests/: e2e_pipeline.rs  live_timeline.rs  multi_system.rs  stability_1000.rs
crates/led-core/: Cargo.toml
crates/led-core/src/: lib.rs  mapping.rs  traits.rs  types.rs
crates/led-demo/: Cargo.toml
crates/led-demo/src/: main.rs
crates/led-hal/: Cargo.toml
crates/led-hal/src/: cluster.rs  engine.rs  hal.rs  heartbeat.rs  lib.rs  sim.rs
crates/led-hal/tests/: bench_c_layout_apply.rs  contract.rs  lifecycle.rs  no_alloc.rs
crates/led-layout/: Cargo.toml
crates/led-layout/src/: lib.rs  mapper.rs  model.rs  props.rs
crates/led-layout/tests/: end_to_end.rs
crates/led-pixel-engine/: Cargo.toml
crates/led-pixel-engine/references/: gpu-compute.md
crates/led-pixel-engine/src/: color.rs  compute.rs  effect.rs  gpu.rs  lib.rs  pipeline.rs  reactive.rs  triple.rs
crates/led-pixel-engine/tests/: audio_bridge.rs  bench_b_render.rs  pipeline.rs
crates/led-protocols/: Cargo.toml
crates/led-protocols/src/: artnet.rs  device.rs  heartbeat.rs  lib.rs  packet.rs  pool.rs  sender.rs
crates/led-protocols/tests/: artnet_conflict.rs  bench_d_sacn_serial.rs  heartbeat_test.rs  parallel_send.rs  sacn_multicast.rs  sacn_wire.rs
crates/led-sequencer/: Cargo.toml
crates/led-sequencer/src/: lib.rs  model.rs  tempo.rs  timeline.rs
crates/led-sequencer/tests/: no_alloc.rs  pipeline_drive.rs
docs/: knowledge-base.md  technical-debt-ledger.md
docs/evidence/: bench-a-audio-core-2026-06-21.md  bench-b-render-2026-06-21.md  bench-c-layout-2026-06-21.md  bench-d-protocols-2026-06-21.md  td-002-arcswap.txt  td-003-sleep-barriers.txt  td-003-sleeps.txt  td-003b-cluster-sleep.txt  td-006-hop-count-10runs.txt  td-007-audit.txt  td-007-cargo-audit.txt  td-008-flash-buf.txt  td-009-cargo-fix.txt  td-009-slice-zip.txt
scripts/: audit_gate.py  pre-commit-hook.sh
tests/: test_audit_gate.py
tests/fixtures/: evidence_good.txt  evidence_zero_passed.txt  ledger_bad.md
