[package]
name = "audio-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Realtime audio intelligence: CPAL capture -> Hann window -> rustfft -> AudioFeatures, broadcast via tokio::sync::watch. Leaf crate (lumyx-system-architect): no workspace dependencies."

[dependencies]
cpal = "0.15"
rustfft = "6"
tokio = { version = "1", features = ["sync"] }
