[package]
name = "led-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Renders a short LED show to a watchable GIF — exercises layout + sequencer + compute effects + beat-sync."

[dependencies]
led-core = { path = "../led-core" }
led-layout = { path = "../led-layout" }
led-sequencer = { path = "../led-sequencer" }
led-pixel-engine = { path = "../led-pixel-engine" }
gif = "0.13"
