[package]
name = "led-layout"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The logical pixel model, prop geometry, and the LayoutMapper that compiles to a CompiledLayout."

[dependencies]
led-core = { path = "../led-core" }

[dev-dependencies]
led-hal = { path = "../led-hal" }
