[package]
name = "led-pixel-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "The render core: effects → per-pixel colors in logical space, with a lock-free render→send handoff."

[dependencies]
led-core = { path = "../led-core" }

[dev-dependencies]
led-hal = { path = "../led-hal" }
led-audio = { path = "../led-audio" }
