[package]
name = "led-sequencer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Non-destructive timeline: composes effects over time into LogicalFrames. A Timeline is itself an Effect."

[dependencies]
led-core = { path = "../led-core" }
led-pixel-engine = { path = "../led-pixel-engine" }

[dev-dependencies]
led-hal = { path = "../led-hal" }
